# 2025-Epita-Intelligence-Symbolique

./: $null  $outputFile  .coverage  .dockerignore  .env  .env.example  .env.template  .flake8  .gitattributes  .gitignore  .roomodes  1.33.0  CARTOGRAPHIE_EXHAUSTIVE_PHASE2B.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CORRECTED_RECOMMENDATIONS.md  DEPOT_CLEANUP_ANALYSIS.md  DESIGN_PARALLEL_WORKFLOW.md  Dockerfile  EVALUATION_JTMS_CONTRIBUTION_ETUDIANTE.md  GETTING_STARTED.md  GUIDE_INSTALLATION_ETUDIANTS.md  JPYPE_WINDOWS_CRASH_FIX.md  KNOWN_ISSUES.md  MIGRATION_WEBAPP.md  PLAN_CONSOLIDATION_DOCS.md  PYTEST_ASYNCIO_CONFIGURATION_CHANGES.md  RAPPORT_ANALYSE_77_FICHIERS.md  RAPPORT_ARCHITECTURE_INTEGRATION_JTMS.md  RAPPORT_COMPLET_NETTOYAGE_ORPHELINS.md  RAPPORT_CONSOLIDATION_DEMO_EPITA_20250610_115359.md  RAPPORT_CONSOLIDATION_VALIDATION.md  RAPPORT_ELIMINATION_MOCKS_PHASE1.md  RAPPORT_EVALUATION_TESTS_SYSTEME.md  RAPPORT_FINALISATION_PHASE_3_SUCCES.md  RAPPORT_FINALISATION_PHASE_4_SUCCES_COMPLET.md  RAPPORT_FINAL_ORGANISATION_ORPHELINS_PHASE_D.md  RAPPORT_FINAL_SESSION_RANGEMENT.md  RAPPORT_INVESTIGATION_ANTI_MOCK_FINAL.md  (+278 more)
.roo/: mcp.json  schedules.json
.temp/: documentation_corrections.md  project_mapping_complete.md  test_cluedo_orchestrator.py_deleted
1.4.1-JTMS/: README.md  analyse_complete.py  atms.py  belifs_loader.py  jtms.py  jtms_graph.html  main.py  requirements.txt  test_import.py  tests.py
1_2_7_argumentation_dialogique/: README.md  Sujet.md  baudelaire_debate.json  enhanced_argumentation_main.py
2.1.6_multiagent_governance_prototype/: README.md  cli.py  comparison_results.csv  comparison_results.md  runner.py
2.3.2-detection-sophismes/: README.md  argument_mining_rules.py  benchmark_gpt.py  benchmark_model.py  classify_with_chatgpt.py  fallacy_pipeline.py  requirements.txt  run_cli.py  symbolic_rules.py  train_camembert.py
2.3.3-generation-contre-argument/: Documentation_Complète.md  example.py  run_app.py
2.3.5_argument_quality/: README.md  requirements.txt
2.3.6_local_llm/: README.md  benchmarks.csv  requirements.txt  setup.sh  subject.md
3.1.5_Interface_Mobile/: .gitignore  README.md  app.json  eas.json  package-lock.json  package.json  styles.web.css
Arg_Semantic_Index/: README.md  UI_streamlit.py  prompts.txt
CaseAI/: index.html  smithy.json
_temp/: found_class_path.txt  get_clean_jar_content.ps1  jar_content_cleaned.txt  jar_content_raw_debug.txt  run_jar_tf.ps1  temp_generated_config.yml  user_config.json
abs_arg_dung/: README.md  __init__.py  a.json  advanced_tests.py  agent.py  analysis_report.json  benchmark.py  cli.py  config.py  demo_analysis.json  demo_framework.dot  demo_framework.json  demo_framework.tgf  demo_interactive.py  enhanced_agent.py  framework_generator.py  io_utils.py  my_framework.json  project_info.py  requirements.txt  test_agent.py  test_analysis.json  test_enhanced.py  test_framework.dot  test_framework.json  test_framework.tgf  validate_project.py
api/: __init__.py  agent_routes.py  dependencies.py  dependencies_simple.py  endpoints.py  endpoints_simple.py  errors.py  factory.py  main.py  main_simple.py  mobile_endpoints.py  models.py  openapi.snapshot.json  proposal_endpoints.py  proposal_models.py  proposal_service.py  services.py  shield_endpoints.py  websocket_routes.py
archived_scripts/: advanced_correction.ps1  applied_corrections_report.csv  corrections_report.csv  debug_agent_instantiation.py  install_environment.py  integration_test_trace_working.ps1  integration_test_with_trace.ps1  integration_test_with_trace_fixed.ps1  integration_test_with_trace_robust.ps1  phase3_complex_diagnostics.py  phase3_final_solution.py  test_investigation_rhetorique_crypto.py  test_orchestrateur_simple.py  test_orchestrateurs_avances.py  test_phase2_stabilized.py  test_phase3_complex_fixes.py  test_phase3_final_validation.py  test_rhetorique_crypto_simple.py  unresolved_references_report.csv
archives/: pre_deletion_backup_20250607_163757_metadata.json
argumentation_analysis/: .env.example  .gitignore  README.md  README_JTMS_PLUGIN.md  __init__.py  coverage.json  coverage.xml  main_orchestrator.ipynb  main_orchestrator.py  paths.py  requirements.txt  run_analysis.py  run_extract_editor.py  run_extract_repair.py  run_orchestration.py  run_tests.py  utils.py
argumentiation_analysis/: .env.example  .gitignore  README.md  __init__.py  cleanup_after_encryption.py  create_complete_encrypted_config.py  load_complete_encrypted_config.py  main_orchestrator.ipynb  main_orchestrator.py  requirements.txt  run_analysis.py  run_extract_editor.py  run_extract_repair.py  run_orchestration.py  verify_encrypted_config.py
backup_orchestration_fixes/: analysis_runner.py  cluedo_orchestrator.py  cluedo_sherlock_watson_demo.py  fix_orchestration_standardization.py  logique_complexe_orchestrator.py
config/: .env.example  .env.template  README.md  __init__.py  config.yaml  orchestration_config.yaml  performance_config.ini  ports.json  pytest.ini  requirements-test.txt  unified_config.py  utf8_environment.conf  validation_config.yml  webapp_config.yml
data/: mystere_laboratoire_ia_cluedo.json  synthetic_logical_propositions_20250609_230700.json  synthetic_logical_propositions_20250609_231118.json  synthetic_logical_propositions_20250609_231142.json
demos/: README.md  debug_single_fallacy.py  demo_epita_diagnostic.py  demo_one_liner_usage.py  demo_rhetorique_complete.py  demo_rhetorique_corrige.py  demo_rhetorique_simplifie.py  demo_unified_system.py  rapport_final_demo_epita.md  rapport_final_interface_web_epita.md  sherlock_watson_auto_demo.py  sherlock_watson_jtms_demo.py  sherlock_watson_jtms_demo_notweety.py  simple_exploration_tool.py  test_parallel_workflow_integration.py  validation_complete_epita.py  validation_complete_report.json  validation_complete_report_enhanced.json
docs/: ANALYSE_MIGRATION_DUPLICATES.md  ARCHITECTURE_HIERARCHIQUE_3_NIVEAUX.md  ARCHITECTURE_MIGRATION_SIMPLE.md  ARCHITECTURE_TESTS_E2E.md  AUDIT_ARCHITECTURAL_RAPPORT.md  BILAN_SESSION_ORCHESTRATION_060625.md  CHANGELOG.md  CONTRIBUTING.md  (+89 more)
(+5930 files in other folders)
