[build-system]
requires = ["setuptools>=61.0", "PyYAML", "psutil", "requests", "pydantic-settings"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -p no:faulthandler"
asyncio_mode = "auto"
norecursedirs = [
    ".git",
    "venv",
    "archived_scripts",
    "libs",
    "abs_arg_dung",
    "examples",
    "argumentation_analysis/services/web_api/tests",
]
pythonpath = [
    ".",
    "argumentation_analysis",
    "project_core"
]
testpaths = [
    "tests"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "api: marks tests related to the API",
    "llm_light: Tests LLM légers (config/init, <30s, ~$0.01-0.05)",
    "llm_integration: Tests intégration LLM complets (appels réels, >30s, ~$0.05-0.20)",
    "llm_critical: Tests critiques stack 100% authentique (E2E, >60s, >$0.20)",
    "real_jpype: marks tests that require a real JPype/JVM environment",
    "no_jvm_session: marks tests that should not start the shared JVM session",
    "phase5",
    "informal",
    "performance",
    "comparison",
    "user_experience",
    "config",
    "api_integration",
    "use_real_numpy",
    "validation",
    "debuglog",
    "use_mock_numpy",
    "requires_tweety_jar",
    "belief_set",
    "propositional",
    "first_order",
    "modal",
    "robustness",
    "playwright",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.poetry]
name = "argumentation-analysis"
version = "0.1.0"
description = "Analysis of argumentation systems"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "argumentation_analysis" },
]

[tool.poetry.extras]
conda_env_name = ["projet-is-roo-new"]

[project]
name = "argumentation-analysis"
version = "0.1.0"
description = "A project for analyzing argumentation systems."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Your Name", email = "you@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml",
    "psutil",
    "requests",
    "pydantic-settings",
    "pandas",
    "numpy",
    "matplotlib",
    "networkx",
    "scikit-learn",
    "scipy",
    "jpype1",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "websockets",
    "jinja2",
    "aiofiles",
    "semantic-kernel",
    "python-dotenv",
    "pytest-playwright"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["argumentation_analysis*"]
exclude = ["tests*"]