[build-system]
requires = ["setuptools>=61.0", "PyYAML", "psutil", "requests", "pydantic-settings"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']
extend-exclude = '''
# Exclude student project directories and files with syntax errors
/(
    1\.4\.1-JTMS
    | 1_2_7_argumentation_dialogique
    | 2\.1\.6_multiagent_governance_prototype
    | 2\.3\.2-detection-sophismes
    | 2\.3\.3-generation-contre-argument
    | 2\.3\.5_argument_quality
    | 2\.3\.6_local_llm
    | 3\.1\.5_Interface_Mobile
    | documentation_system
)/
'''

# NOTE (#1293): pytest configuration lives exclusively in `pytest.ini`.
# A `[tool.pytest.ini_options]` section previously lived here but was DEAD —
# pytest discovers exactly one config file and `pytest.ini` takes precedence
# (pytest.ini > pyproject.toml > tox.ini > setup.cfg), so every key it held
# (pythonpath, addopts, markers, log_cli, ...) was silently overridden. This
# caused documented drift: CLAUDE.md cited pyproject's `pythonpath` as
# authoritative while pytest.ini's `pythonpath = . src` was the live one.
# Removed to establish a single source of truth (pytest.ini). Behavior-neutral:
# pytest already ignored this section. `pythonpath` of pytest.ini is unchanged.

[tool.poetry]
name = "argumentation-analysis"
version = "0.1.0"
description = "Analysis of argumentation systems"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "argumentation_analysis" },
]

[tool.poetry.extras]
conda_env_name = ["projet-is-roo-new"]

[project]
name = "argumentation-analysis"
version = "0.1.0"
description = "A project for analyzing argumentation systems."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Your Name", email = "you@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml",
    "psutil",
    "requests",
    "pydantic-settings",
    "pandas",
    "numpy",
    "matplotlib",
    "networkx",
    "scikit-learn",
    "scipy",
    "jpype1",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "websockets",
    "jinja2",
    "aiofiles",
    "semantic-kernel",
    "python-dotenv",
    "pytest-playwright"
]

[tool.coverage.run]
source = ["argumentation_analysis"]
omit = [
    "argumentation_analysis/**/tests/*",
    "argumentation_analysis/agents/runners/*",
    "argumentation_analysis/scripts/*",
    "argumentation_analysis/ui/*",
    "argumentation_analysis/examples/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
show_missing = true

[tool.setuptools.packages.find]
where = ["."]
include = ["argumentation_analysis*"]
exclude = ["tests*"]

# --- mypy configuration (Issue #401) ---
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
follow_imports = "silent"
ignore_missing_imports = true

# Strict enforcement for core orchestration modules
[[tool.mypy.overrides]]
module = [
    "argumentation_analysis.core.capability_registry",
    "argumentation_analysis.core.shared_state",
    "argumentation_analysis.orchestration.workflow_dsl",
    "argumentation_analysis.orchestration.registry_setup",
    "argumentation_analysis.orchestration.workflows",
    "argumentation_analysis.orchestration.invoke_callables",
    "argumentation_analysis.orchestration.state_writers",
    "argumentation_analysis.agents.factory",
]
strict = true
disallow_untyped_defs = true
disallow_any_generics = true
warn_unused_ignores = true
warn_return_any = true
